<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".activites.MainActivity"
        android:background="@color/primary">

        <com.google.android.material.appbar.AppBarLayout
            android:id="@+id/appbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/primary"
            android:fitsSystemWindows="true"
            android:theme="@style/Theme.MEWWallet">

            <com.google.android.material.appbar.CollapsingToolbarLayout
                android:id="@+id/collapsing_toolbar"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:fitsSystemWindows="true"
                app:contentScrim="@color/primary"
                app:layout_scrollFlags="scroll|exitUntilCollapsed">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:paddingHorizontal="@dimen/_8sdp"
                    android:paddingVertical="@dimen/_8sdp">

                    <LinearLayout
                        android:id="@+id/appbar_logo"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:gravity="center_vertical"
                        app:layout_collapseMode="parallax"
                        app:layout_scrollFlags="enterAlwaysCollapsed"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintStart_toStartOf="parent">

                        <ImageView
                            android:layout_width="@dimen/_24sdp"
                            android:layout_height="@dimen/_24sdp"
                            android:src="@drawable/polygon_logo"
                            android:padding="@dimen/_4sdp"
                            android:background="@drawable/background_purple_button" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="@dimen/_8sdp"
                            android:textAllCaps="true"
                            android:text="Polygon"
                            android:textColor="@color/primary_text"
                            android:textStyle="bold"
                            android:letterSpacing="0.1"
                            android:textSize="@dimen/_12ssp" />

                        <ImageView
                            android:layout_width="@dimen/_20sdp"
                            android:layout_height="@dimen/_20sdp"
                            android:layout_marginStart="@dimen/_4sdp"
                            android:src="@drawable/ic_arrow_down"
                            app:tint="@color/secondary_icon" />
                    </LinearLayout>

                    <ImageView
                        android:layout_width="@dimen/_20sdp"
                        android:layout_height="@dimen/_20sdp"
                        android:src="@drawable/ic_camera"
                        app:tint="@color/primary_icon"
                        app:layout_collapseMode="pin"
                        app:layout_constraintTop_toTopOf="@id/appbar_logo"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintBottom_toBottomOf="@id/appbar_logo" />

                    <TextView
                        android:id="@+id/app_name"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/wallet"
                        android:includeFontPadding="false"
                        android:textColor="@color/primary_text"
                        android:textSize="@dimen/_26ssp"
                        android:textStyle="bold"
                        android:letterSpacing="0.02"
                        app:layout_collapseMode="pin"
                        app:layout_scrollFlags="enterAlways"
                        app:layout_constraintTop_toBottomOf="@id/appbar_logo"
                        app:layout_constraintStart_toStartOf="parent" />

                    <TextView
                        android:id="@+id/total_portfolio_value"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/total_portfolio_value"
                        android:textAllCaps="true"
                        android:textSize="@dimen/_12ssp"
                        android:textColor="@color/secondary_text"
                        android:textStyle="bold"
                        android:letterSpacing="0.1"
                        app:layout_collapseMode="parallax"
                        app:layout_scrollFlags="enterAlwaysCollapsed"
                        app:layout_constraintTop_toBottomOf="@id/app_name"
                        app:layout_constraintStart_toStartOf="parent" />

                    <TextView
                        android:id="@+id/total_money"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="$ 0"
                        android:textAllCaps="true"
                        android:textSize="@dimen/_16ssp"
                        android:textColor="@color/primary_text"
                        android:textStyle="bold"
                        android:letterSpacing="0.1"
                        app:layout_collapseMode="parallax"
                        app:layout_scrollFlags="enterAlwaysCollapsed"
                        app:layout_constraintTop_toBottomOf="@id/total_portfolio_value"
                        app:layout_constraintStart_toStartOf="parent" />

                </androidx.constraintlayout.widget.ConstraintLayout>

                <androidx.appcompat.widget.Toolbar
                    android:layout_width="match_parent"
                    android:layout_height="?actionBarSize" />
            </com.google.android.material.appbar.CollapsingToolbarLayout>

        </com.google.android.material.appbar.AppBarLayout>

        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginHorizontal="@dimen/_8sdp"
            app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <FrameLayout
                    android:id="@+id/fragment_wallets"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:layout_constraintTop_toTopOf="parent"/>

                <RelativeLayout
                    android:id="@+id/already_wallet"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_8sdp"
                    android:paddingHorizontal="@dimen/_20sdp"
                    app:layout_constraintTop_toBottomOf="@id/fragment_wallets">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/_4sdp"
                        android:text="@string/already_have_a_wallet"
                        android:textColor="@color/primary_text"
                        android:textSize="@dimen/_13ssp" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentEnd="true"
                        android:layout_marginTop="@dimen/_4sdp"
                        android:text="@string/restore"
                        android:textAllCaps="true"
                        android:textColor="@color/primary_text"
                        android:textSize="@dimen/_13ssp" />
                </RelativeLayout>

                <LinearLayout
                    android:id="@+id/more_things"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_12sdp"
                    android:orientation="vertical"
                    app:layout_constraintTop_toBottomOf="@id/already_wallet">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/_4sdp"
                        android:letterSpacing="0.02"
                        android:text="@string/more_things"
                        android:textColor="@color/primary_text"
                        android:textSize="@dimen/_16ssp"
                        android:textStyle="bold" />

                    <androidx.constraintlayout.widget.ConstraintLayout
                        android:id="@+id/advanced_features"
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/_45sdp"
                        android:layout_marginTop="@dimen/_8sdp">

                        <ImageView
                            android:id="@+id/advanced_features_icon"
                            android:layout_width="@dimen/_30sdp"
                            android:layout_height="@dimen/_30sdp"
                            android:src="@drawable/ic_vertical_distribute"
                            app:tint="@color/primary_icon"
                            app:layout_constraintTop_toTopOf="parent"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintBottom_toBottomOf="parent" />

                        <TextView
                            android:id="@+id/advanced_features_text"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="@dimen/_10sdp"
                            android:text="@string/advanced_features"
                            android:textSize="@dimen/_15ssp"
                            android:textColor="@color/primary_text"
                            android:textStyle="normal"
                            android:letterSpacing="0.05"
                            app:layout_constraintStart_toEndOf="@id/advanced_features_icon"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintTop_toTopOf="parent"
                            app:layout_constraintBottom_toBottomOf="parent" />

                        <View
                            android:layout_width="0dp"
                            android:layout_height="1dp"
                            android:background="@color/secondary_text"
                            app:layout_constraintStart_toStartOf="@id/advanced_features_text"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintBottom_toBottomOf="parent" />

                    </androidx.constraintlayout.widget.ConstraintLayout>

                    <androidx.constraintlayout.widget.ConstraintLayout
                        android:id="@+id/education_center"
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/_45sdp">

                        <ImageView
                            android:id="@+id/education_center_icon"
                            android:layout_width="@dimen/_30sdp"
                            android:layout_height="@dimen/_30sdp"
                            android:src="@drawable/ic_book"
                            app:tint="@color/primary_icon"
                            app:layout_constraintTop_toTopOf="parent"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintBottom_toBottomOf="parent" />

                        <TextView
                            android:id="@+id/education_center_text"
                            android:layout_width="337dp"
                            android:layout_height="34dp"
                            android:layout_marginStart="@dimen/_10sdp"
                            android:letterSpacing="0.05"
                            android:text="@string/education_center"
                            android:textColor="@color/primary_text"
                            android:textSize="@dimen/_15ssp"
                            app:layout_constraintBottom_toBottomOf="parent"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintStart_toEndOf="@id/education_center_icon"
                            app:layout_constraintTop_toTopOf="parent" />

                        <View
                            android:layout_width="0dp"
                            android:layout_height="1dp"
                            android:background="@color/secondary_text"
                            app:layout_constraintStart_toStartOf="@id/education_center_text"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintBottom_toBottomOf="parent" />

                    </androidx.constraintlayout.widget.ConstraintLayout>

                    <androidx.constraintlayout.widget.ConstraintLayout
                        android:id="@+id/settings"
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/_45sdp">

                        <ImageView
                            android:id="@+id/settings_icon"
                            android:layout_width="@dimen/_30sdp"
                            android:layout_height="@dimen/_30sdp"
                            android:src="@drawable/ic_settings"
                            app:layout_constraintBottom_toBottomOf="parent"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toTopOf="parent"
                            app:tint="@color/primary_icon" />

                        <TextView
                            android:id="@+id/settings_text"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="@dimen/_10sdp"
                            android:letterSpacing="0.05"
                            android:text="@string/settings_and_support"
                            android:textColor="@color/primary_text"
                            android:textSize="@dimen/_15ssp"
                            app:layout_constraintBottom_toBottomOf="parent"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintHorizontal_bias="0.0"
                            app:layout_constraintStart_toEndOf="@id/settings_icon"
                            app:layout_constraintTop_toTopOf="parent" />

                        <View
                            android:layout_width="0dp"
                            android:layout_height="1dp"
                            android:background="@color/secondary_text"
                            app:layout_constraintBottom_toBottomOf="parent"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintStart_toStartOf="@id/settings_text" />

                    </androidx.constraintlayout.widget.ConstraintLayout>

                    <androidx.constraintlayout.widget.ConstraintLayout
                        android:id="@+id/love_mew"
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/_45sdp">

                        <ImageView
                            android:id="@+id/love_mew_icon"
                            android:layout_width="@dimen/_30sdp"
                            android:layout_height="@dimen/_30sdp"
                            android:src="@drawable/ic_favorite"
                            app:tint="@color/primary_icon"
                            app:layout_constraintTop_toTopOf="parent"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintBottom_toBottomOf="parent" />

                        <TextView
                            android:id="@+id/love_mew_text"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="@dimen/_10sdp"
                            android:text="@string/love_mew"
                            android:textSize="@dimen/_15ssp"
                            android:textColor="@color/primary_text"
                            android:letterSpacing="0.05"
                            app:layout_constraintStart_toEndOf="@id/love_mew_icon"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintTop_toTopOf="parent"
                            app:layout_constraintBottom_toBottomOf="parent" />

                        <View
                            android:layout_width="0dp"
                            android:layout_height="1dp"
                            android:background="@color/secondary_text"
                            app:layout_constraintStart_toStartOf="@id/love_mew_text"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintBottom_toBottomOf="parent" />

                    </androidx.constraintlayout.widget.ConstraintLayout>

                </LinearLayout>

                <TextView
                    android:id="@+id/about_app1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_12sdp"
                    android:text="@string/about_app1"
                    android:textColor="@color/secondary_text"
                    android:textSize="@dimen/_13ssp"
                    app:layout_constraintTop_toBottomOf="@id/more_things" />

                <TextView
                    android:id="@+id/about_app2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/about_app2"
                    android:textColor="@color/secondary_text"
                    android:textSize="@dimen/_13ssp"
                    app:layout_constraintTop_toBottomOf="@id/about_app1" />

            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.core.widget.NestedScrollView>

    </androidx.coordinatorlayout.widget.CoordinatorLayout>
</layout>